syntax = "proto3";

message City {
  string city_name = 1;
  string state     = 2;
  string zip_code  = 3;
}